Bug 360315 - Splash screen stays behind Krita.
Summary: Splash screen stays behind Krita.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.9
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-09 16:29 UTC by red_erik_69
Modified: 2016-03-23 12:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description red_erik_69 2016-03-09 16:29:53 UTC
After launch, youll see the splash sreen for a sec until Krita opens on top. It mades the splash screen usability very uncomfortable, you need to minimaze krita to see the splash screen.

Reproducible: Always

Steps to Reproduce:
1. Just open Krita.
2. Youll se the splash screen while krita loads, a sec or two.
3. Krita opens and covers the splash screen.

Actual Results:  
Krita covers the splash screen

Expected Results:  
Splash screen shold be on top of Krita.

Splash screen its still there, but covered.
Alt+tab does not cycle betwen krita and splash screen.
You need to minimaze krita to use the splash screen or diable it.
Disable/enable splash screen in preferences dosent solve this problem.
Comment 1 Halla Rempt 2016-03-22 15:42:39 UTC
Git commit 9eace432eb8643f8f5c07fa2897a03d88e3e64e5 by Boudewijn Rempt.
Committed on 22/03/2016 at 15:42.
Pushed by rempt into branch 'master'.

Fix the logic for showing the splash screen

M  +1    -1    libs/ui/KisApplication.cpp
M  +1    -1    libs/ui/kis_splash_screen.cpp

http://commits.kde.org/krita/9eace432eb8643f8f5c07fa2897a03d88e3e64e5
Comment 2 Halla Rempt 2016-03-23 12:57:24 UTC
Git commit 101185c2cd602b56a7ceef2037995aca1126d601 by Boudewijn Rempt.
Committed on 22/03/2016 at 15:48.
Pushed by rempt into branch 'master'.

For window managers/systems where the alwaysontop hint isn't
honoured.

M  +2    -0    libs/ui/kis_splash_screen.cpp
M  +5    -0    libs/ui/kis_splash_screen.h

http://commits.kde.org/krita/101185c2cd602b56a7ceef2037995aca1126d601