Fix the logic for showing the splash screen

BUG:360315